fix(VSelect, VCombobox): prevent input overlaps prefix

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -128,6 +128,7 @@
   padding-inline-end: var(--v-field-padding-end)
   padding-top: var(--v-field-input-padding-top)
   padding-bottom: var(--v-field-input-padding-bottom)
+  position: relative 
   width: 100%
   --v-field-input-min-height: #{$field-input-min-height}
 
